# leptos-firefox-bug-reprex

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/page/clients/: mod.rs
