[package]
name = "web-app"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr", "hydrate"]
hydrate = [
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "leptos/ssr",
]

[dependencies]
# common
leptos = { version = "0.8.15", features = ["tracing"] }

# frontend only
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = { version = "=0.2.106", optional = true }

# backend only
axum = { version = "0.8.8", optional = true }
leptos_axum = { version = "0.8.7", features = ["tracing"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[package.metadata.leptos]
lib-profile-release = "wasm-release"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false

# Size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
